[gd_scene load_steps=3 format=3 uid="uid://b32hdo7h2utb1"]

[ext_resource type="Theme" uid="uid://drq31mtyljl06" path="res://Themes/main_menu.tres" id="1_o2m7w"]
[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="2_fsguq"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o2m7w")
script = ExtResource("2_fsguq")
action_items = Array[String](["move_up", "move_left", "move_down", "move_right"])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsGridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsGridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingsGridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
